force-app/main/default/objects/Disclosure__c/Disclosure__c.object-meta.xml
<CustomObject>
    <label>Disclosure</label>
    <nameField>
        <displayFormat>D-{00000000}</displayFormat>
        <label>Disclosure ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disclosures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>