force-app/main/default/objects/Disclosure__c/fields/All_Inventors_Signed__c.field-meta.xml
<CustomField>
    <fullName>All_Inventors_Signed__c</fullName>
    <formula>Inventors_Count__c &gt; 0 &amp;&amp; Unsigned_Inventors_Count__c == 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Have all inventors signed?</label>
    <type>Checkbox</type>
</CustomField>