force-app/main/default/objects/Disclosure__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <externalId>true</externalId>
    <label>TLO Case Number</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>