force-app/main/default/objects/Disclosure__c/fields/Case_RecId__c.field-meta.xml
<CustomField>
    <fullName>Case_RecId__c</fullName>
    <label>Case RecId</label>
    <length>24</length>
    <referenceTo>Forrester_Case__x</referenceTo>
    <relationshipLabel>Disclosures</relationshipLabel>
    <relationshipName>Disclosures</relationshipName>
    <type>ExternalLookup</type>
</CustomField>