force-app/main/default/objects/Disclosure__c/fields/Disclosure_Form_Progress__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Form_Progress__c</fullName>
    <label>Disclosure Form Progress</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>