force-app/main/default/objects/Disclosure__c/fields/Disclosure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Reason__c</fullName>
    <inlineHelpText>Check the reasons that best describe why you&apos;re submitting this disclosure.</inlineHelpText>
    <label>Disclosure Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ExistingCompanyInterested</fullName>
                <label>An existing company has already expressed interest in licensing and/or developing the invention</label>
            </value>
            <value>
                <fullName>PartnerOrColleagueSuggestion</fullName>
                <label>A partner in development/colleague suggested I should</label>
            </value>
            <value>
                <fullName>DocumentIntellectualProperty</fullName>
                <label>To document disclosure as Background Intellectual Property in anticipation of working with a sponsor</label>
            </value>
            <value>
                <fullName>StartupCompany</fullName>
                <label>I/We are interested in being involved with a startup company based on this invention</label>
            </value>
            <value>
                <fullName>ComplyWithObligations</fullName>
                <label>To comply with the obligations of an existing sponsored research agreement, collaboration agreement, federal award/grant, or Institution policy</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>