force-app/main/default/objects/Disclosure__c/fields/Disclosure_Reason_Comment__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Reason_Comment__c</fullName>
    <label>Disclosure Reason Comment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>