force-app/main/default/objects/Disclosure__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <displayFormat>-{0}</displayFormat>
    <label>External ID</label>
    <type>AutoNumber</type>
</CustomField>