force-app/main/default/objects/Disclosure__c/fields/Funding_Details__c.field-meta.xml
<CustomField>
    <fullName>Funding_Details__c</fullName>
    <label>Funding Details</label>
    <type>TextArea</type>
</CustomField>