force-app/main/default/objects/Disclosure__c/fields/Inventors_Count__c.field-meta.xml
<CustomField>
    <fullName>Inventors_Count__c</fullName>
    <label>Number of inventors</label>
    <summaryForeignKey>DisclosureInventor__c.Disclosure__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>