force-app/main/default/objects/Disclosure__c/fields/Rejected_By__c.field-meta.xml
<CustomField>
    <fullName>Rejected_By__c</fullName>
    <label>Rejected By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>TLO Admin</fullName>
            </value>
            <value>
                <fullName>Department Head</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>