force-app/main/default/objects/Disclosure__c/fields/Reminder__c.field-meta.xml
<CustomField>
    <fullName>Reminder__c</fullName>
    <label>Reminder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Reminder</fullName>
                <default>true</default>
                <label>No Reminder</label>
            </value>
            <value>
                <fullName>Reminder 1</fullName>
            </value>
            <value>
                <fullName>Reminder 2</fullName>
            </value>
            <value>
                <fullName>Reminder 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>