force-app/main/default/objects/Disclosure__c/fields/Signing_Envelop_Id__c.field-meta.xml
<CustomField>
    <fullName>Signing_Envelop_Id__c</fullName>
    <description>This field contains the envelopId from DocuSign which is unique to this Disclosure.</description>
    <externalId>true</externalId>
    <label>Signing Envelop Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>