force-app/main/default/objects/Disclosure__c/fields/Signing_Init_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Signing_Init_Job_Id__c</fullName>
    <description>Id of Async Job (Queueable) used for DocuSign integration. Keeping job id such that it will enable to use monitor progress.</description>
    <label>Signing Init Job Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>