force-app/main/default/objects/Disclosure__c/fields/SubmittedOnBehalf__c.field-meta.xml
<CustomField>
    <fullName>SubmittedOnBehalf__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted on behalf of someone else</label>
    <type>Checkbox</type>
</CustomField>