force-app/main/default/objects/Disclosure__c/fields/Submitting_Contact__c.field-meta.xml
<CustomField>
    <fullName>Submitting_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SubmittedDisclosures</relationshipLabel>
    <relationshipName>SubmittedDisclosures</relationshipName>
    <type>Lookup</type>
</CustomField>