force-app/main/default/objects/Disclosure__c/fields/Submitting_TLO_Contact__c.field-meta.xml
<CustomField>
    <fullName>Submitting_TLO_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By (Old)</label>
    <referenceTo>TLO_Contact__c</referenceTo>
    <relationshipLabel>SubmittedDisclosuresOLD</relationshipLabel>
    <relationshipName>SubmittedDisclosuresOLD</relationshipName>
    <type>Lookup</type>
</CustomField>