force-app/main/default/objects/Disclosure__c/fields/TLO_License_Officer__c.field-meta.xml
<CustomField>
    <fullName>TLO_License_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TLO Officer</label>
    <referenceTo>TLO_Officer__c</referenceTo>
    <relationshipName>TLO_Officer</relationshipName>
    <type>Lookup</type>
</CustomField>