force-app/main/default/objects/Disclosure__c/fields/Unsigned_Inventors_Count__c.field-meta.xml
<CustomField>
    <fullName>Unsigned_Inventors_Count__c</fullName>
    <label>Number of unsigned inventors</label>
    <summaryFilterItems>
        <field>DisclosureInventor__c.Signed_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>DisclosureInventor__c.Disclosure__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>