force-app/main/default/objects/Disclosure__c/recordTypes/BioTang_Disclosure.recordType-meta.xml
<RecordType>
    <fullName>BioTang_Disclosure</fullName>
    <active>true</active>
    <label>Biological and Tangible Property</label>
</RecordType>