force-app/main/default/objects/Disclosure__c/recordTypes/Copyright_Disclosure.recordType-meta.xml
<RecordType>
    <fullName>Copyright_Disclosure</fullName>
    <active>true</active>
    <label>Copyright</label>
</RecordType>