force-app/main/default/objects/Disclosure__c/recordTypes/Invention_Disclosure.recordType-meta.xml
<RecordType>
    <fullName>Invention_Disclosure</fullName>
    <active>true</active>
    <label>Invention</label>
</RecordType>