force-app/main/default/objects/Disclosure__c/recordTypes/Software_Code_Disclosure.recordType-meta.xml
<RecordType>
    <fullName>Software_Code_Disclosure</fullName>
    <active>true</active>
    <label>Software Code</label>
</RecordType>