force-app/main/default/objects/Disclosure__c/validationRules/Validation_Rule_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule_1</fullName>
    <active>true</active>
    <errorConditionFormula>Name    =  &apos;ValidationRuleTest&apos;</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>ValidationRuleTest kicked in</errorMessage>
</ValidationRule>