force-app/main/default/objects/Disclosure__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Submitting_Contact__c</columns>
    <columns>TLO_License_Officer__c</columns>
    <columns>Status__c</columns>
    <columns>Case_Number__c</columns>
    <columns>Submitted_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>