force-app/main/default/objects/Disclosure__c/listViews/All_Signatures_Received.listView-meta.xml
<ListView>
    <fullName>All_Signatures_Received</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Submitting_Contact__c</columns>
    <columns>TLO_License_Officer__c</columns>
    <columns>Status__c</columns>
    <columns>Case_Number__c</columns>
    <columns>Submitted_Date__c</columns>
    <columns>Inventors_Count__c</columns>
    <columns>Unsigned_Inventors_Count__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>All_Inventors_Signed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Signatures Received</label>
</ListView>