force-app/main/default/objects/Disclosure__c/listViews/Inventor_Submitted.listView-meta.xml
<ListView>
    <fullName>Inventor_Submitted</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Submitting_Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Case_Number__c</columns>
    <columns>Submitted_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Inventor Submitted</value>
    </filters>
    <label>Submitted</label>
</ListView>